feat(messgages): add send message function